<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/ac_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/tvSignTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edSignEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="@string/email_hint"
            android:hint="@string/email_hint"
            android:autofillHints=""
            android:layout_marginTop="16dp" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edSignPassword"
            app:layout_constraintTop_toBottomOf="@+id/edSignEmail"
            app:layout_constraintStart_toStartOf="@+id/edSignEmail"
            app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:hint="@string/password_hint"
            android:autofillHints="" />

    <Button
            android:text="@string/sign_up_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSignUpIn"
            app:layout_constraintTop_toBottomOf="@+id/edSignPassword"
            app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
            app:layout_constraintStart_toStartOf="@+id/edSignEmail"
            app:layout_constraintHorizontal_bias="0.0" />

    <Button
            android:text="@string/forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btForgetP"
            app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
            app:layout_constraintStart_toStartOf="@+id/edSignEmail"
            app:layout_constraintTop_toBottomOf="@+id/btSignUpIn"
            android:visibility="gone" />

    <TextView
            android:text="@string/dialog_reset_email_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvDialogMessage"
            app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
            app:layout_constraintStart_toStartOf="@+id/edSignEmail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSignTitle"
            android:gravity="center_horizontal"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>